...
                                            <rect key="frame" x="321" y="7" width="49" height="30"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <state key="normal" title="Setting"/>
                                        </button>
                                    </barButtonItem>
...
        <scene sceneID="YKB-VC-sHM">
            <objects>
                <tableViewController title="Master" id="fXj-FP-wRO" customClass="InfoListViewController" customModule="RunningMan" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="I70-2D-jBh">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Post" id="bvS-bp-xDH">
                        <barButtonItem key="rightBarButtonItem" style="plain" id="J3q-CE-8d8">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" id="fzs-zF-Z31">
...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHQ-Ey-I8Q">
                                <rect key="frame" x="214" y="442" width="55" height="51"/>
                                <state key="normal" title="good" image="iconLike"/>
                                <connections>
                                    <action selector="good:" destination="TZY-ve-Pfc" eventType="touchUpInside" id="eXb-RM-IgJ"/>
...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SVi-PM-Ii9">
                                <rect key="frame" x="65" y="469" width="245" height="30"/>
                                <state key="normal" title="Confirm"/>
                                <connections>
                                    <action selector="confirm" destination="U1J-Mk-6Zv" eventType="touchUpInside" id="TUQ-Zm-936"/>
...
                        <color key="backgroundColor" red="0.54037897428720805" green="0.81741178987164287" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Post" id="fjJ-z5-rLi"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                    <connections>
...
        <scene sceneID="tu8-S2-pVh">
            <objects>
                <viewController storyboardIdentifier="LoginViewController" title="Login" id="esJ-QK-txf" customClass="LoginViewController" customModule="RunningMan" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="WAy-6R-FOk"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uRk-cr-7n9">
                                <rect key="frame" x="154" y="228" width="64" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6W-Sv-Dnw">
                                <rect key="frame" x="50" y="537" width="273" height="30"/>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <action selector="register" destination="esJ-QK-txf" eventType="touchUpInside" id="dCu-5r-LHg"/>
...
                                <rect key="frame" x="81" y="33" width="218" height="29"/>
                                <segments>
                                    <segment title="Day"/>
                                    <segment title="Week"/>
                                </segments>
                                <connections>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Rank" image="ranking30" selectedImage="ranking30" id="CFA-E1-Snu"/>
                    <connections>
                        <outlet property="table" destination="Oje-73-cff" id="hFy-oy-6E3"/>
...
                        <barButtonItem title="Item" id="XAM-zs-KDk"/>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Title" id="bL8-eV-PQO"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iHv-7e-FDv">
                                <rect key="frame" x="35" y="518" width="138" height="30"/>
                                <state key="normal" title="Confirm Change"/>
                                <connections>
                                    <action selector="confirm:" destination="453-VB-sFa" eventType="touchUpInside" id="2MA-Bn-hA3"/>
...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6A-CS-yNK">
                                <rect key="frame" x="213" y="518" width="128" height="30"/>
                                <state key="normal" title="Change Password"/>
                                <connections>
                                    <segue destination="2Gf-fD-Otd" kind="show" id="zs0-lp-0PD"/>
...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9PY-ka-w0f">
                                <rect key="frame" x="47" y="190" width="280" height="30"/>
                                <state key="normal" title="Select a title image"/>
                                <connections>
                                    <action selector="selectTitleImage:" destination="453-VB-sFa" eventType="touchUpInside" id="EhK-07-iBf"/>
...
